--- a/src/style.css
+++ b/src/style.css
@@ -1,76 +1,115 @@
 .phl-list {
-    @apply divide-y list-none m-0 p-0;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
+
+.phl-list > * {
+    border-bottom: 1px solid #dadada;
+    list-style-type: none;
+    padding: 16px;
+}
+.phl-list > *:last-child {
+    border-bottom: none;
+}
+
 .phl-list .phl-list {
-    @apply border rounded-sm mt-4;
+    border: 1px solid #dadada;
+    margin-top: 10px;
+    border-radius: 4px;
 }
 .phl-drag {
-    @apply absolute
-    shadow-md rounded-md
-    list-none opacity-40 pointer-events-none;
+    position: absolute;
+    box-shadow: 0 0 4px black;
+    list-style-type: none;
+    opacity: 0.4;
+    pointer-events: none;
+    border-radius: 4px;
 }
 
 .phl-active {
-    @apply opacity-30;
+    opacity: 0.5;
 }
 
 .phl-element {
-    @apply flex items-center;
+    display: flex;
+    align-items: center;
 }
 
 .phl-item {
-    @apply p-4;
+    padding: 16px;
 }
 
-.phl-handle {
-    @apply relative h-3 w-4 mr-2;
-    @apply bg-gradient-to-r from-gray-300 to-gray-300;
-    @apply cursor-pointer;
+button.phl-handle {
+    position: relative;
+    height: 12px;
+    width: 16px;
+    margin-right: 8px;
+    background: linear-gradient(to right, rgb(208, 212, 218), rgb(208, 212, 218));
+    cursor: pointer;
     background-size: 100% 2px;
     background-position: center;
     background-repeat: no-repeat;
 }
 
-.phl-handle::before,
-.phl-handle::after {
+button.phl-handle::before,
+button.phl-handle::after {
     content: '';
-    @apply absolute h-[2px] w-full left-0;
-    @apply bg-gray-300;
+    position: absolute;
+    height: 2px;
+    width: 100%;
+    left: 0;
+    background: rgb(208, 212, 218);
 }
 
-.phl-handle::before {
-    @apply top-0;
+button.phl-handle::before {
+    top: 0;
 }
-.phl-handle::after {
-    @apply bottom-0;
+button.phl-handle::after {
+    bottom: 0;
 }
 
 .phl-expand,
 .phl-collapse,
 .phl-extract {
-    @apply h-5 w-5 leading-3 rounded-md relative;
-    @apply bg-gray-100;
+    position: relative;
+    height: 20px;
+    width: 20px;
+    line-height: 12px;
+    background-color: #e2e2e2;
+    color: #a7a7a7;
+    border-radius: 4px;
 }
 
 .phl-expand::after,
 .phl-collapse::after {
     content: '';
-    @apply absolute left-1/2 top-1/2 -translate-x-1/2 rotate-45;
-    @apply h-2 w-2 border-gray-400;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    height: 8px;
+    width: 8px;
+    border: 1px solid #a7a7a7;
 }
 
 .phl-expand::after {
-    @apply border-r-2 border-b-2 -translate-y-3/4;
+    border: 2px solid;
+    transform: translate(-50%, -75%) rotate(45deg);
+    border-left: none;
+    border-top: none;
 }
 .phl-collapse::after {
-    @apply border-l-2 border-t-2 -translate-y-1/4;
+    border: 2px solid;
+    transform: translate(-50%, -25%) rotate(45deg);
+    border-right: none;
+    border-bottom: none;
 }
 
 .phl-extract {
-    @apply mr-1;
+    margin-right: 4px;
     background-image: url('data:image/svg+xml,%3Csvg xmlns="http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg" width="24" height="24" viewBox="0 0 24 24"%3E%3Cg id="evaUndoFill0"%3E%3Cg id="evaUndoFill1"%3E%3Cpath id="evaUndoFill2" fill="rgb(156, 163, 175)" d="M20.22 21a1 1 0 0 1-1-.76a8.91 8.91 0 0 0-7.8-6.69v1.12a1.78 1.78 0 0 1-1.09 1.64A2 2 0 0 1 8.18 16l-5.06-4.41a1.76 1.76 0 0 1 0-2.68l5.06-4.42a2 2 0 0 1 2.18-.3a1.78 1.78 0 0 1 1.09 1.64V7A10.89 10.89 0 0 1 21.5 17.75a10.29 10.29 0 0 1-.31 2.49a1 1 0 0 1-1 .76Z"%2F%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E');
     background-size: contain;
 }
 .phl-label {
-    @apply flex-grow;
+    flex-grow: 1;
 }
